--- a/css/main.css
+++ b/css/main.css
@@ -1,43 +1,58 @@
 body {
-    margin: 60px auto;
-    width: 70%;
+    font-family: 'Raleway', sans-serif;;
 }
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
-}
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-}
-a {
+
+ul, li, a {
     text-decoration: none;
-    color: #999;
-}
-a:hover {
-    text-decoration: underline;
-}
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
-}
-
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
-
-ul.posts li {
     list-style: none;
 }
+
+.profilePicture {
+    border-radius: 50%;
+    width: 20%;
+    margin-top: 2rem;
+}
+
+a {
+    color: black;
+}
+
+header {
+    background-color: #CBF3F0;
+    margin-top: -1rem;
+    margin-left: -1rem;
+    margin-right: -1rem;
+}
+
+.centerProfilePic {
+    display: flex;
+}
+
+.emptySpace {
+    width: 40%;
+}
+
+h1 {
+    text-align: center;
+    color: white;
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+}
+
+li {
+    margin-left: 1rem;
+    padding: 1rem;
+}
+
+.logo {
+    border-radius: 50%;
+    max-width: 5rem;
+}
+
+.groupProjects, .techBlock {
+    background-color: #CBF3F0;
+}
+
