--- a/css/main.css
+++ b/css/main.css
@@ -6,27 +6,44 @@ body {
 ul, li, a {
     text-decoration: none;
     list-style: none;
-}
-
-.profilePicture {
-    border-radius: 50%;
-    width: 45%;
-    margin-top: 2rem;
-    position: relative;
-    top: 17rem;
-}
-
-a {
     color: #42404a;
+    font-size: 1rem;
 }
 
-header {
-    background-color: rgba(240,244,247,255);
-    /* background-color: #f0f4f7; */
-    /* background-color: #CBF3F0; */
-    margin-top: -1rem;
-    margin-left: -1rem;
-    margin-right: -1rem;
+ul {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+}
+
+li {
+    margin-left: 1rem;
+    padding: 1rem;
+}
+
+p {
+    font-size: 2rem;
+}
+
+.containerLeft {
+    background-image: url("/images/Coffee_And_Coding.png");
+    background-repeat: no-repeat;
+    padding: 6rem;
+    width: 30%;
+    height: 100%;
+    left: 0;
+    background-position: left 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    /* justify-content: space-between; */
+    background-color: #42404a;
+    background-attachment: scroll, scroll;
+    background-repeat: repeat, no-repeat;
+    background-size: auto, 150%;
+    position: fixed;
+    text-align: right;
+    top: 0;
 }
 
 .centerProfilePic {
@@ -37,40 +54,82 @@ header {
     width: 40%;
 }
 
+.profilePicture  {
+    border-radius: 100%;
+    width: 75%;
+    border-radius: 100%;
+    box-shadow: 0px 8px 15px rgb(0 0 0 / 50%);
+}
+
 h1 {
     text-align: center;
     color: #42404a;
-    position: relative;
-    top: 17rem;
+    font-size: 4.25rem;
+}
+
+h2 {
+    font-size: 3rem;
+}
+
+h3 {
+    margin-top: 0;
+    font-size: 2rem;
+}
+
+h4 {
+    text-align: center;
+    font-size: 1.75rem;
 }
 
 .subtitle {
     max-width: 30rem;
     text-align: center;
     color: #42404a;
-    position: relative;
-    top: 17rem;
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     /* border-right: .15em solid orange; The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    margin: 0 auto; /*Gives that scrolling effect as the typing happens*/
     letter-spacing: .15em; /* Adjust as needed */
     animation: 
         typing 3.5s steps(40, end),
         blink-caret .75s step-end infinite;
+    /* position: fixed;
+    top: 40%;
+    left: 12%; */
 }
 
-    /* The typing effect */
-    @keyframes typing {
-        from { width: 0 }
-        to { width: 100% }
-    }
-    
-    /* The typewriter cursor effect */
-    /* @keyframes blink-caret {
-        from, to { border-color: transparent }
-        50% { border-color: orange; }
-    } */
+
+/* The typing effect */
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
+
+.titleAndSubtitle {
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+
+
+
+
+
+
+.containerRight {
+    overflow: scroll;
+    max-height: 100rem;
+    margin-left: 30%;
+    max-width: none;
+    padding: 6rem 3rem 3rem 18rem;
+    width: calc(100% - 30%);
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
 
 .videoPosition {
     display: flex;
@@ -84,27 +143,13 @@ iframe {
     padding: 0 0 2rem 2rem;
 }
 
-h3 {
-    margin-top: 0;
-}
-
-.holidayRoadSection {
+.holidayRoadSection, .nutshellSection {
     padding: 2rem;
 }
 
 .videoPosition {
     margin-top: 1rem;
     margin-bottom: 1rem;
-}
-
-ul {
-    display: flex;
-    justify-content: center;
-}
-
-li {
-    margin-left: 1rem;
-    padding: 1rem;
 }
 
 .logo {
@@ -116,67 +161,11 @@ li {
     margin: .2rem;
 }
 
-h4 {
-    text-align: center;
-}
-
-.groupProjects, .techBlock {
-    /* background-color: #CBF3F0; */
-    background-color: #f0f4f7;
-}
-
-.containerLeft {
-    background-image: url("/images/Coffee_And_Coding.png");
-    background-repeat: no-repeat;
-    /* min-width: 33%;
-    margin-left: -1rem;
-    margin-top: -1rem; */
-    padding: 6rem 3rem 3rem 3rem;
-    width: 30%;
-    height: 100%;
-    left: 0;
-    background-position: left 0px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: space-between;
-    background-color: #42404a;
-    background-attachment: scroll, scroll;
-    background-repeat: repeat, no-repeat;
-    background-size: auto, 150%;
-    position: fixed;
-    text-align: right;
-    top: 0;
-}
-
 .main {
     display: flex;
 }
 
-.containerRight {
-    overflow: scroll;
-    max-height: 100rem;
-    margin-right: -1rem;
-    margin-top: -1rem;
-}
-
-.about {
-    padding: 2rem;
-}
-
-.groupProjects {
-    padding: 2rem;
-}
-
-.soloProjects {
-    padding: 2rem;
-}
-
-.techBlock {
-    padding: 2rem;
-}
-
-.educationBlock {
+.about, .groupProjects, .soloProjects, .techBlock, .educationBlock {
     padding: 2rem;
 }
 
@@ -193,7 +182,6 @@ h4 {
     background-color: white;
     border-radius: 50%;
     display: flex;
-    
     justify-content: space-evenly;
 }
 
