--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -179,7 +179,7 @@ body
 }
 .features .fa
 {
-	background: #ffa400;
+	/* background: #ffa400; */
 	border-radius: 50%;
 	color: #FFF;
 	font-size: 28px;
@@ -191,7 +191,8 @@ body
 	margin-bottom: 10px;
 	-webkit-transition: all 0.4s ease;
 	transition: all 0.4s ease;
-
+	padding: 1rem;
+    background: white;
 }
 .features .fa:hover
 {
