--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -74,6 +74,10 @@ body
 	padding-left: 2rem;
 }
 
+.projects {
+	padding: 2rem 0 4rem 0;
+}
+
 /* start templatemo page container */
 @media (min-width: 768px) {
 	.container { width: 700px; }
