--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -101,7 +101,7 @@ body
 	padding: 2rem 0 4rem 0;
 }
 
-#aboutSection, #edSection, #projects {
+#aboutSection, #edSection, #projects, #dailyJournal {
 	padding-top: 6rem;
 	padding-bottom: 6rem;
 }
